--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -18,7 +18,7 @@ jobs:
           username: ${{ secrets. EC2_USER }}
           key: ${{ secrets. EC2_SSH_KEY }}
           script: |
-            cd ~/online-drinks-shop-system
+            cd /home/ubuntu/online-drinks-shop-system
 
             echo "Pull latest code"
             git pull origin testBranch
