--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -18,7 +18,7 @@ jobs:
           username: ${{ secrets. EC2_USER }}
           key: ${{ secrets. EC2_SSH_KEY }}
           script: |
-            cd /home/ubuntu/online-drinks-shop-system
+            cd ~/online-drinks-shop-system
 
             echo "Pull latest code"
             git pull origin testBranch
@@ -33,7 +33,7 @@ jobs:
             sudo cp -r dist/* /var/www/html/
 
             echo "Restart server"
-            cd .. /server
+            cd ../server
             npm install
             sudo systemctl restart myapp
 
